# soft-shell-calculator-ark

./: .gitignore  LICENSE  README.md
.github/: copilot-instructions.md
soft-shell-calculator-lib/: pyproject.toml
soft-shell-calculator-lib/docs/: library_structure.md  workings_soft_shell_calculator.md
soft-shell-calculator-lib/src/soft_shell_calculator_lib/: __init__.py  calculator.py  constants.py  utils.py
soft-shell-calculator-lib/src/soft_shell_calculator_lib/models/: construction_part.py  retaining_wall.py  rpd_measurement.py  wooden_pile.py
soft-shell-calculator-tudelft/: main.py  pyproject.toml
soft-shell-calculator-tudelft/app/: soft_shell_calculator.py
soft-shell-calculator-tudelft/docs/: current_workings_script.md  delivery_letter_tudelft.md
soft-shell-calculator-ui/: main.py  pyproject.toml
