[project]
name = "soft-shell-calculator-tudelft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "scipy>=1.17.1",
    "wxpython>=4.2.5",
    "xlsxwriter>=3.2.9",
]
